--- a/public/assets/gistr.css
+++ b/public/assets/gistr.css
@@ -43,9 +43,8 @@ textarea { overflow: auto; }
 .gist-buttons a.active span { color: #6dcff6; }
 .gist-buttons a + a { margin-left: 20px; }
 
-.gist-list { padding: 0 0 20px; }
-.gist-list li { position: relative; }
-.gist-list li + li { margin-top: 10px; }
+.gist-list { padding: 0 0 10px; }
+.gist-list li { position: relative; margin-bottom: 10px; }
 .gist-list li h3 { font-weight: normal; background: #f7f6f6; border: 1px solid #d9d9d9; padding: 8px 30px 8px 10px; cursor: pointer; margin-bottom: 4px; position: relative; }
 .gist-list li h3 strong { background: #6dcff6; border-radius: 2px; }
 .gist-list li h3 a { position: absolute; top: 8px; right: 8px; font-size: 18px; line-height: 20px; }
@@ -53,6 +52,10 @@ textarea { overflow: auto; }
 .gist-list li h3 a.gist-favorited { color: #6dcff6; }
 
 .gist-hidden { display: none; }
+.gist-pagination { font-size: 0; line-height: 0; }
+.gist-pagination a { display: inline-block; vertical-align: top; color: #000; font-size: 14px; line-height: 18px; min-width: 18px; padding: 5px; border: 1px solid #d9d9d9; text-align: center; text-decoration: none; }
+.gist-pagination a.active { background: #f7f6f6; font-weight: bold; }
+.gist-pagination a + a { margin-left: 10px; }
 
 /* Loader */
 .gists-loading { font-size: 0; line-height: 0; text-align: center; padding-top: 200px; }
