--- a/public/assets/gistr.css
+++ b/public/assets/gistr.css
@@ -8,7 +8,6 @@ body {
 	font-family: 'Open Sans', arial, helvetica, sans-serif;
 	color: #000;
 	background: #fff;
-	min-width: 960px;
 }
 
 a { color: #0252aa; text-decoration: none; cursor: pointer; }
@@ -24,18 +23,29 @@ textarea { overflow: auto; }
 .left, .alignleft { float: left; display: inline; }
 .right, .alignright { float: right; display: inline; }
 
-.shell { width: 960px; margin: 0 auto; }
+.shell { max-width: 960px; margin: 0 auto; padding: 0 10px; }
 
-.header { background: #666; border-bottom: 2px solid #000; box-shadow: 0 0 10px rgba(0, 0, 0, 0.7); }
-.header .shell { padding: 10px; }
+.github-login { max-width: 500px; text-align: center; padding: 20px 0; margin: 0 auto; }
+.github-login img { max-width: 100%; height: auto; }
+.github-login a { display: block; color: #fff; background: #000; margin: 20px 20px 0; font-size: 24px; line-height: 40px; padding: 10px 0; border-radius: 8px; text-decoration: none; transition: background 0.3s; }
+.github-login a span { padding-right: 10px; }
+.github-login a:hover { background: #43b70f; }
+
+.header { background: #f9f9f9; border-bottom: 2px solid #000; box-shadow: 0 0 10px rgba(0, 0, 0, 0.7); padding: 10px 0; }
+.header .shell { padding: 10px; background: url('iron-octo-cat.png') right center no-repeat; background-size: auto 60px; }
 .user-meta { overflow: hidden; }
-.user-image { float: left; margin-right: 10px; border: 3px solid #fff; border-radius: 4px; }
-.user-image img { display: block; width: 80px; height: 80px; }
-.user-name h2 { color: #fff; }
-.user-name h3 { color: #ddd; font-weight: 400; }
+.user-image { float: left; margin-right: 10px; }
+.user-image a { display: block; }
+.user-image img { display: block; width: 60px; height: 60px; border-radius: 4px; }
+.user-name { overflow: hidden; }
+.user-name h2 { color: #333; }
+.user-name h3 { color: #777; font-weight: 400; }
+.user-name h4 { padding-top: 4px; }
+.user-name h4 a { color: #af0000; border-bottom: 1px dotted #af0000; display: inline-block; vertical-align: top; }
+.user-name h4 a:hover { text-decoration: none; }
 
 .gist-search { padding: 20px 0; }
-.gist-search input[type="text"] { border: 2px solid #d9d9d9; padding: 8px 10px; box-sizing: border-box; width: 100%; }
+.gist-search input[type="text"] { border: 2px solid #d9d9d9; padding: 8px 10px; box-sizing: border-box; width: 100%; font-size: 14px; }
 
 .gist-buttons { padding-bottom: 20px; font-size: 0; line-height: 0; }
 .gist-buttons a { display: inline-block; vertical-align: top; color: #000; text-decoration: none; border: 1px solid #d9d9d9; padding: 8px 10px; font-size: 14px; line-height: 18px; }
@@ -52,10 +62,9 @@ textarea { overflow: auto; }
 .gist-list li h3 a.gist-favorited { color: #6dcff6; }
 
 .gist-hidden { display: none; }
-.gist-pagination { font-size: 0; line-height: 0; }
-.gist-pagination a { display: inline-block; vertical-align: top; color: #000; font-size: 14px; line-height: 18px; min-width: 18px; padding: 5px; border: 1px solid #d9d9d9; text-align: center; text-decoration: none; }
+.gist-pagination { font-size: 0; line-height: 0; margin: 0 -5px; }
+.gist-pagination a { display: inline-block; vertical-align: top; color: #000; font-size: 14px; line-height: 18px; min-width: 18px; padding: 5px; border: 1px solid #d9d9d9; text-align: center; text-decoration: none; margin: 0 5px 10px; }
 .gist-pagination a.active { background: #f7f6f6; font-weight: bold; }
-.gist-pagination a + a { margin-left: 10px; }
 
 /* Loader */
 .gists-loading { font-size: 0; line-height: 0; text-align: center; padding-top: 200px; }
