--- a/public/assets/gistr.css
+++ b/public/assets/gistr.css
@@ -58,19 +58,22 @@ textarea { overflow: auto; }
 
 .gist-list { padding: 0 0 10px; }
 .gist-list li { position: relative; }
-.gist-list li h3 { font-weight: normal; background: #fff; border-top: 1px solid #d9d9d9; padding: 8px 30px 8px 10px; cursor: pointer; position: relative; }
+.gist-list li h3 { font-weight: normal; background: #fff; border-top: 1px solid #d9d9d9; padding: 8px 30px 8px 10px; position: relative; }
 .gist-list li:nth-child(odd) h3 { background: #f9f9f9; }
 .no-stripes .gist-list li h3 { background: #fff; }
 .gist-list li h3 strong { color: #fff; background: #6dcff6; border-radius: 2px; }
 .gist-list li h3 a { position: absolute; top: 8px; font-size: 18px; line-height: 20px; }
+.gist-list li h3 a.gist-view { color: #999; right: 104px; }
 .gist-list li h3 a.gist-edit { color: #999; right: 72px; }
 .gist-list li h3 a.gist-copy { color: #999; right: 40px; }
 .gist-list li h3 a.gist-favorite { color: #999; right: 8px; }
-.gist-list li h3 a.gist-favorited { color: #6dcff6; }
 
+.gist-list li h3 a.active,
+.gist-list li h3 a.gist-view:hover,
 .gist-list li h3 a.gist-edit:hover,
 .gist-list li h3 a.gist-copy:hover,
-.gist-list li h3 a.gist-favorite:hover { color: #6dcff6; }
+.gist-list li h3 a.gist-favorite:hover,
+.gist-list li h3 a.gist-favorited { color: #6dcff6; }
 
 .gist-pagination { font-size: 0; line-height: 0; margin: 0 -5px; text-align: right; }
 .gist-pagination a { display: inline-block; vertical-align: top; color: #777; font-size: 14px; line-height: 18px; min-width: 18px; min-height: 18px; padding: 5px; border: 1px solid #d9d9d9; text-align: center; text-decoration: none; margin: 0 0 10px -1px; }
