--- a/public/assets/gistr.css
+++ b/public/assets/gistr.css
@@ -47,8 +47,8 @@ textarea { overflow: auto; }
 .user-name h2 { color: #333; }
 .user-name h3 { color: #777; font-weight: 400; }
 .user-name h4 { padding-top: 10px; }
-.user-name h4 a { color: #af0000; background: #fff; display: block; vertical-align: top; border: 1px solid #d9d9d9; padding: 5px 10px; font-weight: normal; text-align: center; text-transform: uppercase; }
-.user-name h4 a:hover { text-decoration: none; }
+.user-name h4 a { color: #af0000; background: #fff; display: block; vertical-align: top; border: 1px solid #d9d9d9; padding: 5px 10px; font-weight: normal; text-align: center; text-transform: uppercase; text-decoration: none; }
+.user-name h4 a:hover { background: #fee; border-color: #af0000; }
 
 .gist-search { padding: 0 0 10px; }
 .gist-search input[type="text"] { border: 1px solid #d9d9d9; padding: 8px 10px; box-sizing: border-box; width: 100%; font-size: 14px; }
